fixed overflow and waves problems

--- a/projects/order-summary-component-main/styles.css
+++ b/projects/order-summary-component-main/styles.css
@@ -14,12 +14,13 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   background: linear-gradient(60deg, rgba(84,58,183,1) 0%, rgba(0,172,193,1) 100%);
   gap: 2rem;
   animation: gradient 15s ease infinite;
   background-size: 400% 400%;
   background-attachment: fixed;
+  padding: 1rem;
 }
 
 
@@ -89,7 +90,6 @@
   max-width: 450px;
   width: 95%;
   border-radius: 2rem;
-  overflow: hidden;
   border: 4px rgba(255, 255, 255, 0.185) solid;
   backdrop-filter: blur(8px);
 }
@@ -238,7 +238,7 @@
 
 /* See https://codepen.io/goodkatz/pen/LYPGxQz?editors=1100 */
 .waves {
-  position:absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
